# GammaCube

./: .gitignore  CMakeLists.txt  GammaCube.cc  README.md  SEP_coefficients.CSV  SEP_spectrum.CSV  geometry_config.txt  run.mac  vis.mac
Flux_config/: COMP_params.txt  Galactic_params.txt  PLAW_params.txt  SEP_params.txt  Table_params.txt  Uniform_params.txt
OpticalParameters/: CsI_absorption_length.csv  CsI_normalised_emission_intensity.csv  CsI_optical_consts.txt  CsI_refractive_index.csv  Glass_absorption_length.csv  Glass_refractive_index.csv  NaI_absorption_length.csv  NaI_normalised_emission_intensity.csv  NaI_optical_consts.txt  NaI_refractive_index.csv  OpticLayer_absorption_length.csv  OpticLayer_refractive_index.csv  SiPM_Encapsulant_absorption_length.csv  SiPM_Encapsulant_refractive_index.csv  SiPM_PDE.csv  SiPM_PDE_2.5V.csv  Tyvek_reflectivity.csv  Veto_absorption_length.csv  Veto_normalised_emission_intensity.csv  Veto_optical_consts.txt  Veto_refractive_index.csv
TableSpectrum/: PSB97_L1.15.csv  PSB97_L1.2.csv  PSB97_L1.25.csv  PSB97_L1.27.csv  PSB97_L1.3.csv  PSB97_L1.5.csv  flare_M2.csv
include/: ActionInitialization.hh  AnalysisManager.hh  Configuration.hh  CountRates.hh  Detector.hh  EventAction.hh  Geometry.hh  Loader.hh  NaI.hh  PostProcessing.hh  PrimaryGeneratorAction.hh  RunAction.hh  SDHit.hh  SensitiveDetector.hh  SiPMOpticalSD.hh  Sizes.hh  SteppingAction.hh  Utils.hh
src/: ActionInitialization.cc  AnalysisManager.cc  CountRates.cc  Detector.cc  EventAction.cc  Geometry.cc  Loader.cc  NaI.cc  PostProcessing.cc  PrimaryGeneratorAction.cc  (+6 more)
(+14 files in other folders)
